--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Portfolio de Mathis Feldeisen (BTS SIO 2022)</title>
   </head>
   <body>
-    <h1>bienvenu sur mon portfolio !</h1>
+    <h1>bienvenu sur mon portfolio </h1>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
