ajous d'un favicon Task #3 - Ajouter un favicon

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <title>Portfolio de Mathis Feldeisen (BTS SIO 2022)</title>
   </head>
+  <link rel="icon" href="favicon.ico">
   <body>
     <h1>bienvenu sur mon portfolio </h1>
 
