--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Portfolio de Mathis Feldeisen (BTS SIO 2022)</title>
   </head>
   <link rel="icon" href="favicon.ico">
   <body>
-    <h1>Hello, world!</h1>
+    <h1>bonjour  et bienvenu sur mon portfolio</h1>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
