pied de page modif

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     </div>
                 </div>
                 <hr>
-                <p class="text-center" id="copyright">© Amélia Pilou 2021</p>
+                <p class="text-center" id="copyright">© Mathis Feldeisen 2021</p>
             </div>
         </footer> 
     </body>
