--- a/index.html
+++ b/index.html
@@ -83,7 +83,18 @@
                 </div>
             </div>
         </nav>
-        <div class="jumbotron"></div> <!-- Emplacement pour le contenu principal de la page -->
+
+
+        <div class="jumbotron">
+            <h1>bonjour et bienvenu sur mon portfolio !</h1>
+            <p class="text-center"> je m'apelle Amélia Pilou, j'ai 21 ans et ce site a pour vocation de me présenter en tant que personne,en
+        tant qu'étudiante et candidate à l'obtention du BTS SIO (Service informatique aux Organisations) et en tant
+        que future professionelle de l'informatique. </p>
+             <p><a class="btn btn-secondary" href="" target="_blank"
+                              role="button">En savoir plus »</a>
+                        </p>
+        </div> <!-- Emplacement pour le contenu principal de la page -->
+        
         <footer>
             <div class="container">
                 <div class="row">
